--- a/goddess.html
+++ b/goddess.html
@@ -64,6 +64,19 @@
 			.pic .fr{
 				display: none;
 			}
+			.video-fixed{
+				width: 100%;
+				padding: 50px;
+				position: fixed;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				background: #000000;
+			}
+			video{
+				width: 100%;
+			}
+			
 		</style>
 	</head>
 	
@@ -395,6 +408,9 @@
 			
 			
 			</div>
+		</div>
+		<div class="video-fixed">
+			<video src="1.mp4" controls="controls"></video>
 		</div>
 		
 	</body>
