--- a/goddess.html
+++ b/goddess.html
@@ -410,7 +410,7 @@
 			</div>
 		</div>
 		<div class="video-fixed">
-			<video src="1.mp4" controls="controls"></video>
+			<video src="http://v1-default.ixigua.com/55dd1bc0d6803334c2c559766c4837f9/5d35aaa6/video/m/220bab2344c710f4145ae3d06188eaccc031162f627f00007e8bc0e667b7/?rc=Mzd4cXBqZThobjMzZ2kzM0ApQHRAbzw6NDQzMzgzMzg1NDUzNDVvQGg0dilAZzN3KUBmM3UpZHNyZ3lrdXJneXJseHdmOzpAZmJmazVhX2tuXy0tMS0wc3MtbyNvIzQvMS0vLy4uLy82LzQ2LTojbyM6YS1vIzpgLXAjOmB2aVxiZitgXmJmK15xbDojMy5e" controls="controls"></video>
 		</div>
 		
 	</body>
